--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
   <footer>
-    <span class="small">Built in Jekyll for GitHub Pages by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
+    <span class="small">Built in Jekyll for GitHub Pages by <a href="http://twitter.com/#!/michigangraham">@mattgraham</a></span>
   </footer>
   </div>
   <!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
